# ba_depth_node

./: .gitignore  AGENTS.md  CLAUDE.md  package.xml  setup.cfg  setup.py
Docs/: PLAN.md  PLAN_ROS2_CAMERA-Gemini.md
ba_depth_node/: depth_estimator.py  depth_estimator_node.py
config/: depth_estimator.yaml
launch/: depth_estimator.launch.py
