<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>ba_depth_node</name>
  <version>0.1.0</version>
  <description>
    ROS2 depth estimation node for the BA robot arm.
    Subscribes to the overview camera, runs Depth Anything V2 (Small),
    and publishes a relative inverse depth map.
  </description>
  <maintainer email="noreply@example.org">Thomas</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <depend>rclpy</depend>
  <depend>sensor_msgs</depend>
  <exec_depend>python3-opencv</exec_depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
